# naseejmesh

./: .gitignore  Cargo.toml  DOCKER.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.test  README.md  docker-compose.test.yml  docker-compose.yml
console/: package.json
console/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
console/src/components/: ChatPanel.tsx  FlowCanvas.tsx  ProtocolNode.tsx  Sidebar.tsx  TransformNode.tsx
crates/cognitive-core/: Cargo.toml
crates/cognitive-core/src/: architect.rs  lib.rs  mcp_server.rs  rhai_engine.rs  schema_ingestor.rs  tools.rs  vector_store.rs
crates/gateway-core/: Cargo.toml
crates/gateway-core/src/: auth.rs  body.rs  config.rs  error.rs  executor.rs  handler.rs  lib.rs  router.rs  transform.rs
crates/naseej-console/: Cargo.toml
crates/naseej-console/src/: handlers.rs  main.rs  state.rs
crates/naseej-console/src/handlers/: admin.rs  auth.rs  design.rs  mod.rs
crates/naseej-security/: Cargo.toml
crates/naseej-security/src/: auth.rs  key_manager.rs  lib.rs  metering.rs  rate_limit.rs  waf.rs
crates/naseej-test-harness/: Cargo.toml
crates/naseej-test-harness/src/: assertions.rs  fixtures.rs  http_client.rs  lib.rs  mock_backend.rs  scenarios.rs
crates/naseej-test-harness/tests/: integration_tests.rs
crates/naseejmesh-server/: Cargo.toml
crates/naseejmesh-server/src/: main.rs
crates/protocol-adapters/: Cargo.toml
crates/protocol-adapters/src/: context.rs  lib.rs  supervisor.rs  telemetry.rs
crates/protocol-adapters/src/grpc/: mod.rs  service.rs  transcoder.rs
crates/protocol-adapters/src/mqtt/: bridge.rs  client.rs  mod.rs
crates/protocol-adapters/src/soap/: envelope.rs  mod.rs  transcoder.rs
crates/surreal-config/: Cargo.toml
crates/surreal-config/src/: auth_schema.rs  db.rs  error.rs  lib.rs  schema.rs  watcher.rs
naseej-console/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
naseej-console/src/app/: globals.css
naseej-console/src/app/[locale]/: layout.tsx  page.tsx
naseej-console/src/app/[locale]/admin/: layout.tsx
naseej-console/src/app/[locale]/admin/keys/: page.tsx
naseej-console/src/app/[locale]/admin/roles/: page.tsx
naseej-console/src/app/[locale]/admin/users/: page.tsx
naseej-console/src/app/[locale]/dashboard/: page.tsx
naseej-console/src/app/[locale]/design/: page.tsx
naseej-console/src/app/[locale]/login/: page.tsx
naseej-console/src/app/[locale]/monitoring/: page.tsx
naseej-console/src/app/[locale]/routes/: page.tsx
naseej-console/src/app/[locale]/routes/new/: page.tsx
naseej-console/src/app/[locale]/schemas/: page.tsx
naseej-console/src/app/[locale]/security/: page.tsx
naseej-console/src/app/[locale]/settings/: page.tsx
naseej-console/src/app/[locale]/transformations/: page.tsx
naseej-console/src/components/: command-palette.tsx  connection-status.tsx  toast-provider.tsx
naseej-console/src/components/admin/: CreateKeyModal.tsx  CreateRoleModal.tsx  CreateUserModal.tsx  Sidebar.tsx
naseej-console/src/components/flow/: MeshCanvas.tsx  ServiceNode.tsx  SmartDesignDialog.tsx
naseej-console/src/components/layout/: header.tsx  sidebar.tsx
naseej-console/src/components/ui/: badge.tsx  dialog.tsx  dropdown-menu.tsx  tooltip.tsx
naseej-console/src/i18n/: request.ts  routing.ts
naseej-console/src/lib/: api-client.ts  api-types.ts  flow-layout.ts  hooks.ts
naseej-console/src/messages/: ar.json  en.json
naseej-console/src/stores/: auth-store.ts  mesh-store.ts  ui-store.ts
scripts/: run-tests.sh
tests/: mosquitto.conf
