[workspace]
members = ["crates/gateway-core", "crates/surreal-config", "crates/naseejmesh-server"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mohamed Yasser <YASSERRMD>"]
license = "MIT"
repository = "https://github.com/YASSERRMD/naseejmesh"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }

# HTTP Stack
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"

# Database
surrealdb = { version = "2", features = ["kv-rocksdb"] }

# Concurrency
arc-swap = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error Handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
futures = "0.3"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = 'abort'

[profile.dev]
opt-level = 0
debug = true
