[workspace]
members = [
    "crates/gateway-core",
    "crates/surreal-config",
    "crates/protocol-adapters",
    "crates/cognitive-core",
    "crates/naseej-console",
    "crates/naseejmesh-server"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mohamed Yasser <YASSERRMD>"]
license = "MIT"
repository = "https://github.com/YASSERRMD/naseejmesh"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

# HTTP Stack
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"

# Web Framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
surrealdb = { version = "2", features = ["kv-rocksdb"] }

# Concurrency
arc-swap = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error Handling
thiserror = "2"
anyhow = "1"

# Logging & Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = "0.14"

# gRPC
tonic = "0.12"
prost = "0.13"
prost-reflect = "0.14"
prost-types = "0.13"

# MQTT
rumqttc = "0.24"

# XML
quick-xml = { version = "0.37", features = ["serialize"] }

# AI & Scripting
rig-core = "0.6"
rhai = { version = "1.21", features = ["sync", "serde"] }
openapiv3 = "2"
async-openai = "0.27"
reqwest = { version = "0.12", features = ["json"] }

# Utilities
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = 'abort'

[profile.dev]
opt-level = 0
debug = true
