[package]
name = "gateway-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core HTTP gateway logic - routing, body handling, and service traits"

[dependencies]
# HTTP Stack
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }

# Async Runtime
tokio = { workspace = true }

# Concurrency
arc-swap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error Handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
