[package]
name = "naseej-console"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "API server for Naseej Console - Visual Control Plane"

[[bin]]
name = "naseej-console"
path = "src/main.rs"

[dependencies]
# Internal crates
gateway-core = { path = "../gateway-core" }
cognitive-core = { path = "../cognitive-core" }

# Web Framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Async Runtime
tokio = { workspace = true }
tokio-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
futures = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
