[package]
name = "naseej-security"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Security layer for NaseejMesh - WAF, Auth, Rate Limiting"

[dependencies]
# Internal crates
gateway-core = { path = "../gateway-core" }

# Async Runtime
tokio = { workspace = true }

# HTTP
bytes = { workspace = true }
hyper = { workspace = true }

# Caching
moka = { workspace = true }

# Auth
jsonwebtoken = { workspace = true }

# Crypto
sha2 = { workspace = true }
base64 = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error Handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
regex = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
bcrypt = "0.17.1"
rand.workspace = true
hex = "0.4.3"
subtle = "2.6.1"

[dev-dependencies]
tokio = { workspace = true }
