[package]
name = "naseejmesh-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "NaseejMesh API Gateway - High-performance HTTP gateway with hot reload"

[[bin]]
name = "naseejmesh-gateway"
path = "src/main.rs"

[dependencies]
# Internal crates
gateway-core = { path = "../gateway-core" }
surreal-config = { path = "../surreal-config" }

# Async Runtime
tokio = { workspace = true }

# HTTP Stack
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }

# Concurrency
arc-swap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error Handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
futures = { workspace = true }
