[package]
name = "surreal-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SurrealDB configuration engine with Live Query support"

[dependencies]
# Core dependency
gateway-core = { path = "../gateway-core" }

# Database
surrealdb = { workspace = true }

# Async Runtime
tokio = { workspace = true }

# Concurrency
arc-swap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
futures = { workspace = true }
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true }
